# zendb

./: .gitignore  BACKENDS.md  Cargo.toml  ENGINE.md  MONDAY_REVISION.md  OLDPRD.md  PRD.md  SUMMARIZE_SUNDAY.md
zendb-engine/: Cargo.toml
zendb-engine/src/: config.rs  database.rs  lib.rs  merkle.rs  runtime.rs  state.rs  table.rs
zendb-engine/src/computation/: context.rs  mod.rs  registry.rs  state.rs  worker.rs
zendb-engine/src/database/: catalog.rs  mod.rs  operators.rs  states.rs  tables.rs  timers.rs
zendb-engine/src/operator/: config.rs  context.rs  lifecycle.rs  macros.rs  mod.rs  registry.rs  state.rs  traits.rs  worker.rs
zendb-engine/src/operator/prelude/: full_text_index.rs  merkle_tree.rs  mod.rs  rhai.rs
zendb-storage/: Cargo.toml  build.rs
zendb-storage/src/: benchmark.rs  lib.rs
zendb-storage/src/core/: backend.rs  btree.rs  hashtable.rs  keydir.rs  mod.rs  order_log.rs  orderlog.rs  skiplist.rs  topic.rs  traits.rs  wal.rs
zendb-storage/src/frontend/: mod.rs  state.rs  table.rs
zendb-storage/src/utils/: mod.rs  reusables.rs  serdes.rs
zendb-testing/: Cargo.toml
zendb-testing/src/: executor.rs  lib.rs  operators.rs  tests.rs
zendb-types/: Cargo.toml  PRD.md  expanded.rs
zendb-types/src/: apply.rs  codec.rs  delta.rs  encode.rs  error.rs  lib.rs  merge.rs  path.rs
zendb-types/src/core/: cell.rs  change.rs  delta.rs  event.rs  hlc.rs  mod.rs  op.rs  path.rs  traits.rs
zendb-types/src/types/: atom.rs  blob.rs  bool.rs  counter.rs  int.rs  list.rs  mod.rs  mv_register.rs  or_set.rs  priority_queue.rs  record.rs  set.rs  string.rs  text.rs  timestamp.rs
