[workspace]
resolver = "2"

members = [
    "zendb-types",
    "zendb-storage",
    "zendb-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenin/zendb"
authors = ["ZeninDB Contributors"]

[workspace.dependencies]
# zendb-types
indexmap = "2"
thiserror = "2"

# zendb-storage
memmap2 = "0.9"
hashbrown = "0.15"

# serialization
bincode = { version = "2", features = ["derive"] }
rkyv = "0.8"

# zendb-engine
blake3 = "1"
