[workspace]
resolver = "2"

members = [
    "zendb-types",
    "zendb-storage",
    "zendb-engine",
    "zendb-testing",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/zenin/zendb"
authors = ["ZeninDB Contributors"]

[workspace.dependencies]
# zendb-storage
memmap2 = "0.9"
hashbrown = "0.15"

# serialization
bincode = { version = "2", features = ["derive"] }
rkyv = "0.8"

# zendb-types
machine-uid = "0.5"

# zendb-engine
blake3 = "1"

# concurrency
parking_lot = "0.12"
log = "0.4"
arc-swap = "1"
