[package]
name = "zendb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZeninDB table engine"

[dependencies]
zendb-types = { path = "../zendb-types" }
zendb-storage = { path = "../zendb-storage" }
bincode.workspace = true
hashbrown.workspace = true
