[package]
name = "zendb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZeninDB table engine"

[dependencies]
zendb-types = { path = "../zendb-types" }
zendb-storage = { path = "../zendb-storage" }
bincode.workspace = true
blake3.workspace = true
hashbrown.workspace = true
parking_lot.workspace = true
log.workspace = true
rhai = { version = "1", features = ["sync"] }

[dev-dependencies]
futures = "0.3"
