[package]
name = "zendb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage subsystem for ZeninDB — WAL, SkipList, KeyDir, B+Tree, compaction"

[dependencies]
memmap2.workspace = true
hashbrown.workspace = true
rkyv = { version = "0.8", default-features = false, features = ["std", "alloc", "unaligned"] }
