[package]
name = "zendb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage subsystem for ZeninDB — KeyDir, B+Tree, OrderLog, compaction"

[dependencies]
memmap2.workspace = true
hashbrown.workspace = true
bincode.workspace = true

[dev-dependencies]
lmdb = "0.8"
tempfile = "3"
