[package]
name = "zendb-testing"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ZeninDB integration tests"

[dependencies]
zendb-types = { path = "../zendb-types" }
zendb-storage = { path = "../zendb-storage" }
zendb-engine = { path = "../zendb-engine" }
bincode.workspace = true
parking_lot.workspace = true
log.workspace = true
futures = "0.3"
