[package]
name = "zendb-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core type system for ZeninDB — HLC, Cell, Value, Op, Path, Event, Type, and ContainerType"

[dependencies]
bincode.workspace = true
blake3.workspace = true
machine-uid.workspace = true
